# eldroid-ssg

./: .gitignore  Cargo.toml  README.md
_site/blog/: first-post.html  getting-started.html  second-post.html  welcome.html
components/: blog_layout.html
content/blog/: first-post.md  getting-started.md  second-post.md  test_diagrams.md  welcome.md
docs/: components.md  development.md  diagrams.md  features.md  macros.md  optimization.md  seo_markdown.md  seo_performance.md  styling.md  troubleshooting.md  usage.md
examples/blog/components/: footer.html  header.html  post-card.html
examples/blog/content/: index.html
examples/blog/content/posts/: choosing-static-site-generator.html  getting-started-with-rust.html
examples/blog/content/styles/: main.css  post.css
src/: analyzer.rs  config.rs  error_handler.rs  html.rs  lib.rs  macros.rs  main.rs  markdown.rs  minify.rs  seo.rs  seo_gen.rs  seo_html.rs  seo_types.rs  template_gen.rs  troubleshooting.rs  variables.rs  watcher.rs
static/css/: markdown.css  syntax.css
static/js/: hot-reload.js
tests/: analyzer_tests.rs  html_tests.rs  integration_tests.rs  minify_tests.rs  seo_tests.rs  watcher_tests.rs
