[package]
name = "eldroid-ssg"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
minify-html = "0.15"
lightningcss = "1.0"
swc = "0.273"
swc_common = "0.33"
rayon = "1.8"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
scraper = "0.17"
regex = "1.9"
lazy_static = "1.4"
url = "2.4"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
