[package]
name = "eldroid-ssg"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
minify-html = "0.15"
lightningcss = "1.0"
swc = "0.273"
swc_common = "0.33"
rayon = "1.8"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
scraper = "0.17"
regex = "1.9"
lazy_static = "1.4"
url = "2.4"
chrono = "0.4"
notify = "6.1"
tokio = { version = "1.35", features = ["full"] }
warp = "0.3"
futures = "0.3"
portpicker = "0.1"

[dev-dependencies]
tempfile = "3.9"
assert_fs = "1.1"
predicates = "3.0"
async-std = { version = "1.12", features = ["attributes"] }
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
