[package]
name = "eldroid-ssg"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4"
minify-html = "0.16.4"
lightningcss = "1.0.0-alpha.65"
rayon = "1.8"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
scraper = "0.23.1"
regex = "1.9"
lazy_static = "1.4"
url = "2.4"
chrono = "0.4"
notify = "8.0.0"
tokio = { version = "1.35", features = ["full"] }
warp = "0.3"
futures = "0.3"
portpicker = "0.1"
anyhow = "1.0.98"
pulldown-cmark = "0.13.0"
chrono-humanize = "0.2.3"
syntect = "5.2.0"
yaml-front-matter = "0.1.0"
html-escape = "0.2.13"
thiserror = "2.0.12"
html2text = "0.15.1"

[dev-dependencies]
tempfile = "3.9"
assert_fs = "1.1"
predicates = "3.0"
async-std = { version = "1.12", features = ["attributes"] }
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
